[gd_scene load_steps=19 format=3 uid="uid://b7ws2nwcq7l2a"]

[ext_resource type="Script" uid="uid://copdfyv2qf15b" path="res://scripts/core/TapperArea.gd" id="1_qwert"]
[ext_resource type="Texture2D" uid="uid://bfrton5fj6xxm" path="res://assets/art/chodes/humble_sprout_chode.png" id="2_chode_img_tier0"]
[ext_resource type="AudioStream" uid="uid://dudrpfqck0r12" path="res://assets/audio/sfx/synth_bloop_01.ogg" id="2_n3pgf"]
[ext_resource type="Shader" uid="uid://6axhh62nhlbc" path="res://assets/shaders/slime_ripple_particle.gdshader" id="6_roir8"]
[ext_resource type="Texture2D" uid="uid://bp5sotx8um6l5" path="res://assets/art/chodes/veinous_veridian_chode.png" id="7_chode_img_tier1"]
[ext_resource type="Texture2D" uid="uid://b40t46fpfxvms" path="res://assets/art/chodes/cracked_core.png" id="8_chode_img_tier2"]
[ext_resource type="Texture2D" uid="uid://duv0helu6xfka" path="res://assets/art/vfx/dollar_sign.png" id="8_n3pgf"]
[ext_resource type="Shader" uid="uid://cx8te4a8bj3c3" path="res://assets/shaders/edge_light_sprite.gdshader" id="9_edge_light_shader"]
[ext_resource type="AudioStream" uid="uid://y80flas0v6u1" path="res://assets/audio/sfx/megaSlap.ogg" id="9_fu0jh"]
[ext_resource type="Script" uid="uid://bk8ycf8fr0wua" path="res://scripts/visuals/ShaderPulseEffect.gd" id="10_n3pgf"]

[sub_resource type="Animation" id="Animation_squash_stretch"]
resource_name = "squash_stretch"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedChode:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.55, 0.5), Vector2(0.6, 0.4), Vector2(0.5, 0.6), Vector2(0.55, 0.5)]
}

[sub_resource type="Animation" id="Animation_evolution_celebration"]
resource_name = "evolution_celebration"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedChode:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.55, 0.5), Vector2(0.8, 0.3), Vector2(0.3, 0.9), Vector2(0.9, 0.9), Vector2(0.4, 0.8), Vector2(0.7, 0.7), Vector2(0.9, 0.3), Vector2(0.3, 0.7), Vector2(1, 1), Vector2(0.7, 0.7), Vector2(0.55, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedChode:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 15.0, -15.0, 30.0, -30.0, 45.0, -45.0, 20.0, -20.0, 10.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedChode:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.5, 0.5, 1.5, 1), Color(0.5, 1.5, 1.5, 1), Color(1.5, 1.5, 0.5, 1), Color(2, 0.5, 0.5, 1), Color(0.5, 2, 0.5, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedChode:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(21, 37), Vector2(21, 0), Vector2(0, 37), Vector2(42, 37), Vector2(21, 74), Vector2(21, 37)]
}

[sub_resource type="Animation" id="Animation_mega_slap"]
resource_name = "mega_slap"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedChode:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.55, 0.5), Vector2(0.7, 0.3), Vector2(0.4, 0.8), Vector2(0.65, 0.45), Vector2(0.55, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedChode:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 0.7, 0, 1), Color(2, 1.5, 0, 1), Color(1.5, 1, 0.3, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedChode:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -10.0, 20.0, -5.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_main"]
_data = {
&"RESET": SubResource("Animation_squash_stretch"),
&"evolution_celebration": SubResource("Animation_evolution_celebration"),
&"mega_slap": SubResource("Animation_mega_slap"),
&"squash_stretch": SubResource("Animation_squash_stretch")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_chode_custom_light"]
shader = ExtResource("9_edge_light_shader")
shader_parameter/light_color = Color(1, 0, 0.6, 0.627451)
shader_parameter/light_pos_uv = Vector2(0.8, 0.12)
shader_parameter/light_radius = 0.415
shader_parameter/light_intensity = 0.9
shader_parameter/edge_smoothness = 0.5

[sub_resource type="SpriteFrames" id="SpriteFrames_chode_tiers"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_chode_img_tier0")
}],
"loop": true,
"name": &"tier_0_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_chode_img_tier1")
}],
"loop": true,
"name": &"tier_1_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_chode_img_tier2")
}],
"loop": true,
"name": &"tier_2_idle",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n3pgf"]
shader = ExtResource("6_roir8")
shader_parameter/iResolution = Vector2(128, 128)
shader_parameter/glitter_color = Vector3(1, 0.5, 0.1)
shader_parameter/ripple_speed = 1.5
shader_parameter/ripple_freq = 10.0
shader_parameter/glitter_strength = 1.3
shader_parameter/glitter_sharpness = 10.0
shader_parameter/color_ripple_influence = 0.3

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_girth"]
lifetime_randomness = 0.2
emission_shape = 2
emission_sphere_radius = 3.0
direction = Vector3(0, -1, 0)
spread = 30.0
initial_velocity_min = 162.6
initial_velocity_max = 200.0
gravity = Vector3(0, 200, 0)
scale_min = 0.4
scale_max = 0.6

[node name="TapperArea" type="Node2D"]
position = Vector2(605, 367)
script = ExtResource("1_qwert")

[node name="ChodeClickZone" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -166.0
offset_right = 182.0
offset_bottom = 241.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 95.5)
size_flags_horizontal = 4
size_flags_vertical = 4
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="TapSFXPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -60)
stream = ExtResource("2_n3pgf")
pitch_scale = 0.38
max_polyphony = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_main")
}

[node name="AnimatedChode" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_chode_custom_light")
position = Vector2(29, 39.5)
scale = Vector2(0.55, 0.5)
sprite_frames = SubResource("SpriteFrames_chode_tiers")
animation = &"tier_0_idle"

[node name="TapParticles" type="GPUParticles2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_n3pgf")
position = Vector2(26, -144)
scale = Vector2(2, 2)
emitting = false
amount = 1
texture = ExtResource("8_n3pgf")
lifetime = 5.0
one_shot = true
speed_scale = 1.25
explosiveness = 1.0
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_girth")

[node name="MegaSlapSFXPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(2, 44)
stream = ExtResource("9_fu0jh")
max_polyphony = 2

[node name="SimulatedNeonPulseEffectRight" type="Node" parent="." node_paths=PackedStringArray("target_node")]
script = ExtResource("10_n3pgf")
target_node = NodePath("../AnimatedChode")
pulse_speed = 0.45
min_value = 0.42
max_value = 1.208

[connection signal="pressed" from="ChodeClickZone" to="." method="_on_pressed"]
